# aspect-cli-plugin-template

./: .bazelrc  .bazelversion  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  go.bzl  go.mod  go.sum  plugin.go
.aspect/cli/: config.yaml  plugins.yaml
.github/workflows/: default.yml  release.yml  release_notes.txt
examples/your-plugin/: .aspectplugins  README.md  WORKSPACE
plugins/your-plugin/: BUILD.bazel  plugin.go
release/: BUILD.bazel  release.bzl
