load(":release.bzl", "multi_platform_binaries", "release")

multi_platform_binaries(
    # This name is chosen to match what we tell users to install in .aspectplugins:
    # - name: hello-world
    name = "hello-world",
    embed = ["//:aspect-cli-plugin-template_lib"],
)

release(
    name = "release",
    targets = [":hello-world"],
)
