load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "your-plugin_lib",
    srcs = ["plugin.go"],
    importpath = "aspect.build/cli/plugins/your-plugin",
    visibility = ["//release:__pkg__"],
    deps = [
        "@aspect_cli//bazel/buildeventstream/proto",
        "@aspect_cli//pkg/ioutils",
        "@aspect_cli//pkg/plugin/sdk/v1alpha2/config",
        "@bazel_gazelle//label:go_default_library",
        "@com_github_bazelbuild_buildtools//edit:go_default_library",
        "@com_github_hashicorp_go_plugin//:go-plugin",
        "@com_github_manifoldco_promptui//:promptui",
    ],
)

go_binary(
    name = "your-plugin",
    embed = [":your-plugin_lib"],
    gc_linkopts = [
        "-s",
        "-w",
    ],
    visibility = ["//visibility:public"],
)
